# miet

./: .gitignore
5 term/Программирование на языке Python/Labs/1/: lab_1_1.py  lab_1_2.py  lab_1_4.py  lab_1_5.py
5 term/Программирование на языке Python/Labs/2/: theory.md
5 term/Программирование на языке Python/Labs/2/2/: lab_2_2.py
5 term/Программирование на языке Python/Labs/2/4/: lab_2_4.py
5 term/Программирование на языке Python/Labs/3/: lab_3_2.py  lab_3_3.py  theory.md
5_term/Algorithms/: CMakeLists.txt
5_term/Algorithms/src/: lab1  lab1.cpp  lab2.cpp  lab3.cpp  lab_1.cpp
5_term/C#_prog/Lab_1/: Lab_1.sln
5_term/C#_prog/Lab_1/Lab_1/: Main.cs
5_term/C#_prog/Lab_1/Lab_1/src/: Education.cs  Exam.cs  Person.cs  Student.cs
5_term/C#_prog/Lab_2/: Lab_2.sln
5_term/C#_prog/Lab_2/Lab_2/: Main.cs
5_term/C#_prog/Lab_2/Lab_2/src/: Exam.cs  Person.cs  Student.cs
5_term/Matan_Base_anaconda/KR/: KR.ipynb
5_term/Matan_base/km_1/: task_1.m  task_2.m
5_term/Python_prog/Labs/1/: lab_1_2.py  lab_1_3.py  lab_1_4.py  theory.md
5_term/Python_prog/Labs/2/1/: input.txt  lab_2_1.py  output.txt
5_term/Python_prog/Labs/2/3/: input_2.txt  lab_2_3.py  output.txt
5_term/Python_prog/Labs/2/lab_2_1/: input.txt  input_incorrect_all.txt  output.txt
5_term/Python_prog/Labs/2/lab_2_3/: input_1.txt  input_2.txt
5_term/Python_prog/Labs/2/lab_2_4/: input.txt  output.txt
5_term/Python_prog/Labs/3/: lab_3_2.py  lab_3_4.py  theory.md
5_term/Python_prog/Labs/4/: book.py  lab_4_1.py  theory.md
5_term/Python_prog/Labs/l1/: lab_1_1.py  lab_1_3.py  lab_1_5.py  theory.md
5_term/Python_prog/Labs/l2/: theory.md
5_term/Python_prog/Labs/l2/lab_2_1/: lab_2_1.py
5_term/Python_prog/Labs/l2/lab_2_2/: input.txt  lab_2_2.py  output.txt
5_term/Python_prog/Labs/l2/lab_2_3/: lab_2_3.py  output.txt
5_term/Python_prog/Labs/l2/lab_2_4/: lab_2_4.py
5_term/Python_prog/Labs/l3/: lab_3_1.py  lab_3_3.py  lab_3_4.py
5_term/Python_prog/Labs/l4/: lab_4_1.py
5_term/Python_prog/Labs/l4/book_pk/: book.py
5_term/Python_prog/Labs/l5/: Lab_5_1.py  helper.py  output.pk
5_term/Python_prog/Labs/l6/: lab_6_1.py  lab_6_2.py  lab_6_3.py
5_term/Python_prog/Labs/l6/files/i said more files/: nope.txt
5_term/Python_prog/Labs/l6/files/more files/all you need is/: yeap.txt
5_term/Python_prog/Labs/l6/files/more files/all you need is/more/files/: key.txt  yeap.txt
5_term/Python_prog/Labs/l7/: client.py  mail.py  server.py  txt.txt
6_term/Linux/lab_1/: rmfile.sh  script4
6_term/Linux/lab_2/: CMakeLists.txt
6_term/Linux/lab_2/src/task_2/: hello.cpp  main.c  obr.c  out_err.cpp
6_term/Linux/lab_2/src/task_4/: ex4_1.c  ex4_2.c  ex4_3.c
6_term/Linux/lab_2/src/task_5/: ex5_1.c
6_term/Linux/lab_2/src/task_6/: ex6_1.c  ex6_2.c
6_term/Linux/lab_3/: CMakeLists.txt
6_term/Linux/lab_3/src/: pr1  pr1.c  pr2  pr2.c  pr3  pr3.c  pr4  pr4.c
6_term/OpenMP/lab_1/: CMakeLists.txt  README.md  openmp_benchmark.py  speed.py
6_term/OpenMP/lab_1/src/: parallel.cpp  without_parallel.cpp
6_term/OpenMP/lab_2/: benchmark.py  lab2  script.cpp
